# Metis_SEC_EDGAR_Fraud_Analyzer

./: .gitignore  CMakeLists.txt  README.md  config.pson
client/: app.js  i18n.js  index.html  style.css
docs/: API.md  BACKGROUND.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  GLOSSARY.md  HOWTO.md  LICENSE.txt  MODELS.md  README.md  SECURITY.md  TODO.md  TROUBLESHOOTING.md  USER_GUIDE.md
include/sec_analyzer/: analyzer.h  cache.h  config.h  exporter.h  http_server.h  json.h  logger.h  pson.h  sec_fetcher.h  types.h  util.h  version.h.in
include/sec_analyzer/models/: altman.h  beneish.h  benford.h  fraud_triangle.h  piotroski.h
src/: analyzer.cpp  cache.cpp  config.cpp  exporter.cpp  http_server.cpp  main.cpp  sec_fetcher.cpp
src/models/: altman.cpp  beneish.cpp  benford.cpp  fraud_triangle.cpp  piotroski.cpp
